load("@io_bazel_rules_scala//scala:scala.bzl", "setup_scala_toolchain")

setup_scala_toolchain(
    name = "my_scala_toolchain",
    dependency_tracking_unused_deps_patterns = ["-@maven//:com_twitter_util_slf4j_api_2_13"],
    scala_compile_classpath = [
        "@maven//:org_scala_lang_scala_compiler",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_library_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_macro_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scalacopts = [
        "-Ywarn-dead-code",
        "-Ywarn-value-discard",
        "-deprecation",
        "-Xfatal-warnings",
        "-explaintypes",
        "-feature",
        "-unchecked",
        "-Ywarn-unused:imports",  # Warn if an import selector is not referenced.
        "-Ywarn-unused:privates",  # Warn if a private member is unused.
    ],
    strict_deps_mode = "error",
    unused_dependency_checker_mode = "error",
    visibility = ["//visibility:public"],
)
