scala_test(
    name = "tests",
    srcs = glob(["*.scala"]),
    deps = [
        "//tracing-and-testing/src/main/scala/dev/enbnt/example",
        "@maven//:com_google_inject_guice",
        "@maven//:com_twitter_finagle_base_http_2_13",
        "@maven//:com_twitter_finagle_core_2_13",
        "@maven//:com_twitter_finagle_http2_2_13",
        "@maven//:com_twitter_finagle_http_2_13",
        "@maven//:com_twitter_finagle_netty4_http_2_13",
        "@maven//:com_twitter_finagle_stats_2_13",
        "@maven//:com_twitter_finagle_stats_core_2_13",
        "@maven//:com_twitter_finatra_http_annotations_2_13",
        "@maven//:com_twitter_finatra_http_core_2_13",
        "@maven//:com_twitter_finatra_http_server_2_13",
        "@maven//:com_twitter_finatra_jackson_2_13",
        "@maven//:com_twitter_inject_app_2_13",
        "@maven//:com_twitter_inject_core_2_13",
        "@maven//:com_twitter_inject_logback_2_13",
        "@maven//:com_twitter_inject_ports_2_13",
        "@maven//:com_twitter_inject_server_2_13",
        "@maven//:com_twitter_inject_utils_2_13",
        "@maven//:com_twitter_twitter_server_2_13",
        "@maven//:com_twitter_util_app_2_13",
        "@maven//:com_twitter_util_app_lifecycle_2_13",
        "@maven//:com_twitter_util_core_2_13",
        "@maven//:com_twitter_util_lint_2_13",
        "@maven//:com_twitter_util_slf4j_api_2_13",
        "@maven//:com_twitter_util_slf4j_jul_bridge_2_13",
        "@maven//:com_twitter_util_stats_2_13",
        "@maven//:jakarta_validation_jakarta_validation_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_nop",
        "@testJars//:com_twitter_finatra_http_server_2_13_tests",
        "@testJars//:com_twitter_inject_app_2_13_tests",
        "@testJars//:com_twitter_inject_core_2_13_tests",
        "@testJars//:com_twitter_inject_modules_2_13_tests",
        "@testJars//:com_twitter_inject_server_2_13_tests",
    ],
)
