load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

scala_library(
    name = "datasource",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    exports = [
        "//timeseries/timeseries4s/timeseries-core/src/main/scala/dev/enbnt/timeseries/common",
        "//timeseries/timeseries4s/timeseries-core/src/main/scala/dev/enbnt/timeseries/immutable",
        "//timeseries/timeseries4s/timeseries-core/src/main/scala/dev/enbnt/timeseries/mutable",
        "//timeseries/timeseries4s/timeseries-core/src/main/scala/dev/enbnt/timeseries/util",
        "@maven//:com_twitter_util_core_2_13",
    ],
    deps = [
        "//timeseries/timeseries4s/timeseries-core/src/main/scala/dev/enbnt/timeseries/common",
        "//timeseries/timeseries4s/timeseries-core/src/main/scala/dev/enbnt/timeseries/immutable",
        "//timeseries/timeseries4s/timeseries-core/src/main/scala/dev/enbnt/timeseries/mutable",
        "//timeseries/timeseries4s/timeseries-core/src/main/scala/dev/enbnt/timeseries/util",
        "@maven//:com_twitter_util_core_2_13",
    ],
)
