load("@io_bazel_rules_scala//jmh:jmh.bzl", "scala_benchmark_jmh")

scala_benchmark_jmh(
    name = "jmh",
    srcs = glob(["*.scala"]),
    deps = [
        "//timeseries/timeseries4s/timeseries-core/src/main/scala/dev/enbnt/timeseries/util",
        "@maven//:com_twitter_util_core_2_13",
    ],
)

scala_test(
    name = "jmh_command_line_parsing_test",
    args = ["-h"],
    main_class = "org.openjdk.jmh.Main",
    deps = [":jmh"],
)
